--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,221 @@
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
-    <h1>HTML Form</h1>
-    <script type="text/javascript" src="./main.js"></script>
+
+    <form
+      action="https://mate-academy-form-lesson.herokuapp.com/create-application"
+      id="forms"
+      class="form"
+      method="post"
+    >
+      <fieldset class="fieldSet">
+        <legend>Personal information</legend>
+
+        <label class="label" for="yourSurname">
+          Surname:
+          <input
+            class="input__field"
+            type="text"
+            name="surname"
+            autocomplete="off"
+            id="yourSurname"
+            minlength="2"
+            maxlength="20"
+            required
+          >
+        </label>
+
+        <label class="label" for="yourName">
+          Name:
+          <input
+            class="input__field"
+            type="text"
+            name="name"
+            autocomplete="off"
+            id="yourName"
+            minlength="2"
+            maxlength="20"
+            required
+          >
+        </label>
+
+        <label class="label" for="yourAge">
+          How old are You?
+          <input
+            class="input__field"
+            type="number"
+            min="1"
+            max="100"
+            value="12"
+            id="yourAge"
+            required
+          >
+        </label>
+
+        <label class="label" for="fullDateOfBirth">
+          Full date of birth:
+          <input
+            class="input__field"
+            type="date"
+            id="fullDateOfBirth"
+            required
+          >
+        </label>
+
+        <label class="label" for="agreement">
+          I accept the term of the agreement
+          <input
+            class="input__field"
+            type="checkbox"
+            id="agreement"
+            required
+          >
+        </label>
+      </fieldset>
+
+      <fieldset class="fieldSet">
+        <legend>Registration</legend>
+
+        <label class="label" for="yourEmail">
+          E-mail:
+          <input
+            class="input__field"
+            type="email"
+            name="email"
+            placeholder="email@example.com"
+            id="yourEmail"
+            required
+          >
+        </label>
+
+        <label class="label" for="password">
+          Password:
+          <input
+            class="input__field"
+            type="password"
+            name="password"
+            id="password"
+            minlength="5"
+            maxlength="25"
+            required
+          >
+        </label>
+      </fieldset>
+
+      <fieldset class="fieldSet">
+        <legend>An interesting fact about you!</legend>
+
+        <div class="loveCats">
+          Do you love cats?
+          <label class="label" for="optionYes">
+            <input
+            class="input__field"
+            type="radio"
+            name="cats"
+            id="optionYes"
+            >
+            Yes
+          </label>
+
+          <label class="label" for="optionNo">
+            <input
+            class="input__field"
+            type="radio"
+            name="cats"
+            id="optionNo"
+            >
+            No
+          </label>
+        </div>
+
+        <label class="label" for="color">
+          What is your favorite color?
+          <input
+            class="input__field"
+            type="color"
+            name="color"
+            id="color"
+            required
+          >
+        </label>
+
+        <label class="label" for="timeToBed">
+          What time do you go to bed?
+          <input
+            class="input__field"
+            type="time"
+            name="tineToBed"
+            id="timeToBed"
+            step="2"
+            required
+          >
+        </label>
+
+
+        <label class="label" for="favoriteCars">
+          What are your favorite brand of cars?
+          <select
+            name="favoriteCars"
+            id="favoriteCars"
+            multiple
+            required
+          >
+            <option value="bmw">BMW</option>
+            <option value="audi">Audi</option>
+            <option value="lada">Lada</option>
+          </select>
+        </label>
+
+        <label class="label" for="ourWork">
+          How do you rate our work?
+          <input
+            class="input__field"
+            type="range"
+            name="ourWork"
+            id="ourWork"
+            value="0"
+            required
+          >
+        </label>
+      </fieldset>
+
+      <fieldset class="fieldSet">
+        <legend>Additional info:</legend>
+
+        <label class="label" for="comments">
+          Comments:
+          <textarea
+            name="comments"
+            id="comments"
+            cols="20"
+            rows="2"
+            autocomplete="off"
+          >
+          </textarea>
+        </label>
+
+        <label class="label" for="recommendUs">
+          Would you recommend us?
+          <select
+            name="recommendUs"
+            id="recommendUs"
+          >
+            <option value="yes">yes</option>
+            <option value="no">No</option>
+          </select>
+        </label>
+      </fieldset>
+
+      <!-- form="personalInfo additionalInfo factsAboutYou registry" -->
+      <button
+        form="forms"
+        class="submitBtn"
+        type="submit"
+      >
+        Submit
+      </button>
+    </form>
+
+    <script type="text/javascript" src="main.js"></script>
   </body>
 </html>
