indent in textarea was changed

--- a/src/index.html
+++ b/src/index.html
@@ -200,8 +200,7 @@
             cols="20"
             rows="2"
             autocomplete="off"
-          >
-          </textarea>
+          ></textarea>
         </label>
 
         <label class="label" for="recommendUs">
