textarea's attributes were changed

--- a/src/index.html
+++ b/src/index.html
@@ -194,13 +194,7 @@
 
         <label class="label" for="comments">
           Comments:
-          <textarea
-            name="comments"
-            id="comments"
-            cols="20"
-            rows="2"
-            autocomplete="off"
-          ></textarea>
+          <textarea name="comments" id="comments"></textarea>
         </label>
 
         <label class="label" for="recommendUs">
