files have been redone per checklist

--- a/src/index.html
+++ b/src/index.html
@@ -108,22 +108,22 @@
       <fieldset class="fieldSet">
         <legend>An interesting fact about you!</legend>
 
-        <div class="loveCats">
+        <div class="label loveCats">
           <label class="loveCats__label">
             Do you love cats?
             <input
-            class="input__field"
-            type="radio"
-            name="cats"
+              class="input__field"
+              type="radio"
+              name="cats"
             >
             Yes
           </label>
 
           <label class="loveCats__label">
             <input
-            class="input__field"
-            type="radio"
-            name="cats"
+              class="input__field"
+              type="radio"
+              name="cats"
             >
             No
           </label>
